# ruse-basic-api

./: .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  appspec.yml  deploy.sh
.github/workflows/: deploy.sh  deploy.yml  main.yml
scripts/: after_install.sh  application_start.sh  application_stop.sh
src/: main.rs
src/models/: responses.rs
src/repositories/: nasa_repository.rs  random_dad_joke_repository.rs
src/routes/: routes.rs
