[package]
name = "basic-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket =  { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
okapi = { version = "0.7.0" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
futures = "0.3"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
openssl = "*"
dotenv = "0.15.0"


[global]
address = "0.0.0.0"
port = 8000
